--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                     </div>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link disabled" href="/iCoder/contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
+                    <a class="nav-link" href="/iCoder/contact.html" tabindex="-1" aria-disabled="true">Contact Us</a>
                 </li>
             </ul>
             <form class="form-inline my-2 my-lg-0">
