--- a/index.html
+++ b/index.html
@@ -121,8 +121,7 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                    </div>
-                    <img class="bd-placeholder-img" width="200" height="250" src="kimg1.jpg">
+                      <img class="bd-placeholder-img" width="200" height="250" src="kimg1.jpg"></div>
                 </div>
             </div>
             <div class="col-md-6">
@@ -137,8 +136,8 @@
                         <a href="#" class="stretched-link">Continue reading</a>
                     </div>
                     <div class="col-auto d-none d-lg-block">
-                    </div>
-                    <img class="bd-placeholder-img" width="200" height="250" src="kimg2.jpg">
+                    
+                    <img class="bd-placeholder-img" width="200" height="250" src="kimg2.jpg"></div>
                 </div>
             </div>
         </div>
